--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "babel src -d build --watch",
     "build": "babel src -d build",
     "test": "mocha tests/index.test.js -w",
+    "test:single": "mocha tests/index.test.js",
     "commit": "git-cz",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
