fix(added reactjs package): reactjs package
added reactjs package to package.json

--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "webpack": "3.6.0"
   },
   "dependencies": {
-    "d3": "4.10.2"
+    "d3": "4.10.2",
+    "react": "16.0.0",
+    "react-dom": "16.0.0"
   }
 }
