--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "prebuild": "rimraf dist",
     "build": "npm-run-all --parallel build:*",
     "build:main": "babel --copy-files src -d build",
-    "build:umd": "webpack --output-filename index.umd.js",
-    "build:umd.min": "webpack --output-filename index.umd.min.js -p",
     "end": "copyfiles -a build/**/* ../test-react/node_modules/react-logarithmic-scale-graph/",
     "test": "mocha tests/index.test.js -w",
     "test:single": "mocha tests/index.test.js",
@@ -33,6 +31,7 @@
   ],
   "files": [
     "build",
+    "package.json",
     "README.md"
   ],
   "author": "Dhruv <dhruv.datt@talentica.com>",
