feat(build): test build
check if package is installed correctly

--- a/package.json
+++ b/package.json
@@ -28,6 +28,12 @@
     "graph",
     "D3"
   ],
+  "files": [
+    "build",
+    "package.json",
+    "node_modules",
+    "README.md"
+  ],
   "author": "Dhruv <dhruv.datt@talentica.com>",
   "license": "MIT",
   "bugs": {
