feat(build): test build
added post install command

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test:single": "mocha tests/index.test.js",
     "precommit": "npm run test:single",
     "commit": "git-cz",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
+    "postinstall": "npm install"
   },
   "czConfig": {
     "path": "node_modules/cz-conventional-changelog"
