--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ script:
   - npm run build
 after_success:
   - npm run semantic-release
+  - npm install
 branches:
   except:
     - /^v\d+\.\d+\.\d+$/
